Fix for PR 45816: Restructuring the error menu when the CD ROM is missing.